--- a/RabbitMq.service.Bus/RabbitMq.service.Bus.csproj
+++ b/RabbitMq.service.Bus/RabbitMq.service.Bus.csproj
@@ -22,6 +22,9 @@
     <Folder Include="RabbitMQ\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Autofac" Version="6.4.0" />
